...
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app"
        android:id="@+id/info"
        android:layout_marginBottom="100dp"
        >

            <EditText
                android:hint="Casa"
                android:id="@+id/squadracasa"
                android:layout_width="wrap_content"
                android:fontFamily="@font/cb"
                android:textSize="24dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
            </EditText>

            <EditText
                android:hint="Ospite"
                android:id="@+id/squadraospite"
                android:layout_width="wrap_content"
                android:fontFamily="@font/cb"
                android:gravity="right"
                android:textSize="24dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">
            </EditText>


            <Spinner
                android:id="@+id/colorecasa"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_below="@id/squadracasa">
            </Spinner>

            <Spinner
                android:layout_below="@id/squadraospite"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:id="@+id/coloreospite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quote"
            android:layout_below="@id/coloreospite">

            <EditText
                android:id="@+id/quotacasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="1"
                android:fontFamily="@font/cb"
                android:inputType="number"
                android:textSize="36dp"
...
                android:layout_weight="1"
                >

            </EditText>

            <EditText
                android:id="@+id/quotapareggio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:hint="X"
                android:fontFamily="@font/cb"
...
                android:layout_weight="1"
                android:layout_below="@id/coloreospite">

            </EditText>

            <EditText
                android:id="@+id/quotaospite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36dp"
                android:gravity="center"
                android:inputType="number"
                android:fontFamily="@font/cb"
...
        </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/orario"
                android:layout_below="@id/quote">

            <Button
                android:id="@+id/datapartita"
                android:layout_width="wrap_content"
                android:background="@color/neros"
                android:textColor="@color/biancos"
                android:textSize="24dp"
                android:fontFamily="@font/cb"
                android:layout_height="wrap_content">
            </Button>

                <EditText

                    android:id="@+id/orapartita"
                    android:hint="HH"
                    android:fontFamily="@font/cb"
                    android:inputType="number"
                    android:gravity="center"
                    android:textSize="24dp"
                    android:layout_width="wrap_content"
...
                    android:layout_below="@id/datapartita"
                    android:layout_alignLeft="@id/datapartita"
                    />

                <EditText

                    android:id="@+id/minutipartita"
                    android:hint="MM"
                    android:inputType="number"
                    android:fontFamily="@font/cb"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="24dp"
...


            </RelativeLayout>


        <Button
            android:text="AGGIORNA INFORMAZIONI"
            android:layout_alignParentBottom="true"
            android:id="@+id/bottoneOK"
            android:onClick="aggiornadati"
            android:fontFamily="@font/cb"
            android:layout_width="match_parent"
            android:textSize="26dp"
            android:layout_height="wrap_content" />

...
