...
        android:layout_marginRight="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_below="@id/fittizio"
        android:background="#55ffffff"
        android:layout_centerHorizontal="true"
        android:id="@+id/sfondodati">

        <TextView
            android:id="@+id/accedi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
...
            android:shadowRadius="9"
            android:shadowColor="@color/scuro"
            android:shadowDx="1"
            android:shadowDy="1"/>

        <EditText
            android:id="@+id/inserisciuser"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:letterSpacing="0.25"
            android:textCursorDrawable="@drawable/matita2"
...
            android:fontFamily="@font/cb"
            android:layout_below="@+id/accedi"
            android:nextFocusForward="@+id/pass"
            android:background="@drawable/edittextsopra" />

        <EditText
            android:id="@+id/inseriscipass"
            android:password="true"
            android:background="@drawable/edittextsotto"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:textAlignment="center"
            android:textCursorDrawable="@drawable/matita2"
...
            android:hint="PASSWORD"
            android:fontFamily="@font/cb"
            android:imeOptions="actionDone"
            android:layout_below="@+id/inserisciuser" />

        <Button
            android:id="@+id/premiaccesso"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textColor="@color/scuro"
            android:layout_below="@+id/inseriscipass"
            android:layout_centerHorizontal="true"
            android:onClick="eseguiLogin"
            android:background="@drawable/arc"
            android:text="ACCEDI" />

        <TextView
            android:id="@+id/nonseiiscritto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
...
