...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/datapartita">

    <RelativeLayout
        android:id="@+id/primoRelative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageViewAggiorna"
            android:background="@drawable/modifica"
            android:onClick="aggiornaPartita"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:text="AGGIORNA"
            android:id="@+id/textRelativeSinistro"
            android:layout_width="wrap_content"
            android:onClick="aggiornaPartita"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cb"
            android:layout_toRightOf="@id/imageViewAggiorna"/>
...
