...
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:id="@+id/gestionecodice"
                    android:layout_below="@id/gestionesaldo">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/serviziobuono"
                        android:singleLine="true"
                        android:hint="NETFLIX"
                        android:gravity="center"
                        android:textColorHint="#B1B1B1"
                        android:fontFamily="@font/cr"
                        android:layout_weight="1"
                        >
                    </Spinner>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/codicebuono"
                        android:singleLine="true"
                        android:hint="CODICE"
                        android:gravity="center"
                        android:textColorHint="#B1B1B1"
                        android:fontFamily="@font/cr"
                        android:layout_weight="1"
                        >
                    </EditText>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/valorebuono"
                        android:singleLine="true"
                        android:inputType="number"
                        android:hint="€"
                        android:gravity="center"
                        android:textColorHint="#B1B1B1"
                        android:fontFamily="@font/cr"
...

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/regalacodice"
                    android:background="@color/blus"
                    android:layout_centerHorizontal="true"
                    android:text="REGALA CODICE"
                    android:layout_below="@id/gestionecodice"
                    android:onClick="regalacodice"
                    android:textColor="@color/biancos"
...
