...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/listviewGestioneUtenti"
                    >
                </ListView>
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>
...
